--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@ng-select/ng-select": "^10.0.3",
     "angular-ng-autocomplete": "^2.0.12",
     "bootstrap": "^5.2.3",
+    "ng-auto-complete": "^5.0.3",
+    "ng-select": "^1.0.2",
     "ng2-order-pipe": "^0.1.5",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^6.0.3",
